--- a/package.json
+++ b/package.json
@@ -7,30 +7,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.0.0",
-    "@angular/common": "~19.0.0",
-    "@angular/compiler": "~19.0.0",
-    "@angular/core": "~19.0.0",
-    "@angular/forms": "~19.0.0",
-    "@angular/platform-browser": "~19.0.0",
-    "@angular/platform-browser-dynamic": "~19.0.0",
-    "@angular/platform-server": "~19.0.0",
-    "@angular/router": "~19.0.0",
-    "@angular/ssr": "~19.0.0",
+    "@angular/animations": "19.1.0-next.4",
+    "@angular/common": "19.1.0-next.4",
+    "@angular/compiler": "19.1.0-next.4",
+    "@angular/core": "19.1.0-next.4",
+    "@angular/forms": "19.1.0-next.4",
+    "@angular/platform-browser": "19.1.0-next.4",
+    "@angular/platform-browser-dynamic": "19.1.0-next.4",
+    "@angular/platform-server": "19.1.0-next.4",
+    "@angular/router": "19.1.0-next.4",
+    "@angular/ssr": "19.1.0-next.2",
     "@elysiajs/static": "1.2.0",
     "elysia": "1.2.2",
-    "express": "~4.18.2",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "~1.10.0",
     "@analogjs/vitest-angular": "~1.10.0",
-    "@angular-devkit/build-angular": "~19.0.0",
+    "@angular-devkit/build-angular": "19.1.0-next.2",
     "@angular-devkit/core": "19.1.0-next.2",
-    "@angular-devkit/schematics": "~19.0.0",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "~19.0.0",
-    "@angular/language-service": "~19.0.0",
+    "@angular-devkit/schematics": "19.1.0-next.2",
+    "@angular/cli": "19.1.0-next.2",
+    "@angular/compiler-cli": "19.1.0-next.4",
+    "@angular/language-service": "19.1.0-next.4",
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
     "@eslint/js": "^9.8.0",
@@ -44,11 +43,10 @@
     "@nx/web": "20.3.0",
     "@nx/workspace": "20.3.0",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~19.0.0",
+    "@schematics/angular": "19.1.0-next.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/express": "4.17.14",
     "@typescript-eslint/utils": "^8.13.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
