--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@typescript-eslint/utils": "^8.13.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
-    "angular-eslint": "^19.0.2",
+    "angular-eslint": "19.0.3-alpha.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
